# tap-rev_io

./: PKG-INFO  README.md  meltano.yml  pyproject.toml  setup.py  tox.ini
tap_rev_io/: client.py  streams.py  tap.py
tap_rev_io/schemas/: Addresses.json  Agents.json  Announcements.json  Audits.json  BillProfiles.json  Bills.json  Charges.json  ContactTypes.json  Contacts.json  Credits.json  CustomerRelationships.json  Customers.json  Files.json  InventoryItem.json  InventoryTypes.json  NoteTypes.json  Notes.json  OrderServiceProducts.json  OrderServices.json  Orders.json  PackageProducts.json  Packages.json  PaymentAccounts.json  PaymentMethods.json  Payments.json  ProcessPhases.json  ProcessTasks.json  Processes.json  ProductGroups.json  ProductTypes.json  Products.json  ProviderAccounts.json  Providers.json  ReportCategories.json  Reports.json  RequestAddresses.json  RequestContacts.json  RequestProducts.json  RequestServices.json  RequestStatuses.json  (+15 more)
tap_rev_io/tests/: __init__.py  test_core.py
